--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,8 +18,12 @@ services:
     networks:
       - gis_network
     volumes:
-     - whalebro_static:/home/gis_6/staticfiles/
-     - whalebro_media:/home/gis_6/media/
+      - whalebro_static:/home/gis_6/staticfiles/
+      - whalebro_media:/home/gis_6/media/
+    secrets:
+      - DJANGO_SECRET_KEY
+      - MARIADB_USER
+      - MARIADB_PASSWORD
 
   mariadb:
     image: mariadb:10.5
@@ -27,6 +31,10 @@ services:
       - gis_network
     volumes:
       - whalebro_mariadb:/var/lib/mysql
+    secrets:
+      - MARIADB_ROOT_PASSWORD
+      - MARIADB_USER
+      - MARIADB_PASSWORD
     environment:
       MARIADB_ROOT_PASSWORD: password1234
       MARIADB_DATABASE: django
@@ -40,3 +48,13 @@ volumes:
   whalebro_static:
   whalebro_media:
   whalebro_mariadb:
+
+secrets:
+  DJANGO_SECRET_KEY:
+    external: true
+  MARIADB_ROOT_PASSWORD:
+    external: true
+  MARIADB_USER:
+    external: true
+  MARIADB_PASSWORD:
+    external: true
